2004-05-14  Darryl Okahata  <darrylo@xemacs.org>

	* window.c (current-pixel-row, current-pixel-column).  Added a
	new function, ``current-pixel-row'', that returns the pixel row
	of point.  current-pixel-column was modified to share code with
	current-pixel-row''.

2004-09-14  Jerry James  <james@xemacs.org>

	* compiler.h: Change old UNUSED_ARG into UNUSED_ARG and
	ATTRIBUTE_UNUSED.  Create a new UNUSED macro that works in the
	common case.  Define conservatively for the Intel compiler.
	* dialog-x.c (dbox_descriptor_to_widget_value): Comment out
	declaration and assignment of unused variable title.
	(x_make_dialog_box_internal): Remove unused variable parent.
	* emacs.c (Fkill_emacs): Uno doesn't grok typeof.
	* file-coding.c (Fdefine_coding_system_alias): Remove unused
	variable real_coding_system.
	* glyphs.c (map_subwindow): Remove unused variable f.
	* gui-x.c (button_item_to_widget_value): Rename intlen to
	unused_intlen to quiet Uno.
	* miscplay.c (UNUSED): Removed in favor of compiler.h version.
	* mule-canna.c (Fcanna_touroku_string): Remove unused variable
	len.
	* mule-canna.c (Fcanna_henkan_next): Remove unused variable endp.
	* mule-ccl.c (CCL_WRITE_STRING): Remove unused variable bytes and
	fix some indentation problems.
	* number-gmp.h: Turn off gcc extensions for Uno.
	* redisplay-output.c (compare_display_blocks): #if 0 out
	declaration and assignment of unused variable block_end.
	* redisplay.c (regenerate_window_extents_only_changed): Remove
	unused variable new_start.
	(regenerate_window_incrementally): Ditto.
	* scrollbar.c (update_scrollbar_instance): #if 0 out declaration
	and assignment of unused variable new_window.
	* specifier.c (specifier_instance): Remove unused variable tag.
	* sysdep.c (tty_init_sys_modes_on_device): Define and assigne
	variable output_fd only when it will be used.
	(tty_reset_sys_modes_on_device): Ditto.
	* sysproc.h: Define the FD_* macros conservatively for Uno.
	* syssignal.h (SIG_ARG_MAYBE_UNUSED): New macro.